--- a/style.css
+++ b/style.css
@@ -186,6 +186,12 @@ img {
 }
 
 @media (max-width: 670px) {
+    main {
+        width: 100vw;
+        height: 100vh;
+        padding: 40px;
+    }
+
     .card {
         flex-direction: column;
         width: 300px;
